--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.reneweb</groupId>
     <artifactId>kovalid</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -34,6 +34,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray</id>
+            <url>https://api.bintray.com/maven/reneweb/maven/kovalid/;publish=1</url>
+        </repository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
 
 </project>
